# copium

./: .gitignore  README.md  build.py  copium.ipynb  gacha.py  pyproject.toml
copium/: copium.ipynb  gacha.pyx  ligma.ipynb  nightium.ipynb  originium.ipynb
