[tool.poetry]
name = "copium"
version = "0.1.0"
description = ""
authors = ["hdk5 <hdk5@hdk5.xyz>"]
license = "Unlicense"
build = "build.py"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.1"
matplotlib = "^3.5.1"
more-itertools = "^8.12.0"
notebook = "^6.4.7"
Cython = "^3.0.0a"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0", "Cython", "numpy"]
build-backend = "poetry.core.masonry.api"
