[tool.poetry]
name = "copium"
version = "0.1.0"
description = ""
authors = ["hdk5 <hdk5@hdk5.xyz>"]
license = "Unlicense"
build = "build.py"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
more-itertools = "^8.13.0"
notebook = "^6.4.12"
Cython = "^3.0.0a"
scipy = "^1.9.0"
ipympl = "^0.9.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0", "Cython", "numpy"]
build-backend = "poetry.core.masonry.api"
